--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -1,10 +1,14 @@
 name: Daily Schedule Generator
 
 on:
+  push:      # <--- THIS IS THE NEW PART
+    branches:
+      - main
+    paths:
+      - 'generate_schedule.py' # Only run if the script changes
   schedule:
-    # Runs at 18:00 UTC (which is 5:00 AM Sydney Time)
-    - cron: '0 18 * * *'
-  workflow_dispatch: # Allows you to run it manually to test
+    - cron: '0 18 * * *' # Runs at 5:00 AM Sydney Time
+  workflow_dispatch:      # Allows manual click
 
 permissions:
   contents: write
@@ -12,7 +16,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
